add highlight on click for todos

--- a/smart-contract-to-do-list-frontend/src/Components/ToDoListItem/ToDoListItem.module.css
+++ b/smart-contract-to-do-list-frontend/src/Components/ToDoListItem/ToDoListItem.module.css
@@ -28,3 +28,23 @@
   /*TODO*/
 }
 
+.clicked {
+  background-color: rgba(194, 217, 234, 0.8);
+  border-radius: 5px;
+  display: flex;
+  width: 500px;
+  padding: 5px;
+  justify-content: space-between;
+  word-break: break-all;
+}
+
+.notClicked {
+  background-color: rgb(236, 232, 232);
+  border-radius: 5px;
+  display: flex;
+  width: 500px;
+  padding: 5px;
+  justify-content: space-between;
+  word-break: break-all;
+}
+
